--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.82",
     "@tailwindcss/typography": "^0.5.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
