--- a/front/package.json
+++ b/front/package.json
@@ -14,7 +14,8 @@
     "@splinetool/runtime": "^1.9.82",
     "@tailwindcss/typography": "^0.5.16",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
